--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -1,1 +1,27 @@
-<p>login works!</p>
+<div  class="container-fuild">
+<div class="row">
+
+    <div id="login" >
+        <img src="/assets/LT.png" style="display:block; margin: auto; margin-top: 30pt; width: 100pt; height: auto; border-radius: 100pt;"><br>
+        <form>
+            <h1>LogIn:</h1>
+            <div class="form-group">
+                <label>Identifiant:</label><br>
+                <input type="text" name="identifiant" class="form-control" id="identification"
+                    [(ngModel)]="user.login"><br>
+                <label>Mot de passe:</label><br>
+                <input type="password" name="password" class="form-control" id="password"
+                    [(ngModel)]="user.password"><br>
+
+
+                <input type="submit" value="S'identifier" class="btn btn-dark btn-sm" (click)="login()">
+                <a class="link" href="http://localhost:4200/addUser" id="addUser" role="button" style="color: black;">
+                    Créer un compte
+                </a>
+            </div>
+        </form>
+    </div>
+
+
+</div>
+</div>
