--- a/app/profil/profil.component.html
+++ b/app/profil/profil.component.html
@@ -1,1 +1,14 @@
-<p>profil works!</p>
+<div  class="container-fuild">
+    <div class="row">
+    <div class="col-lg-3" style="border-right: solid; border-right-color: #a52a2a; border-width: 5px; border-radius: 15pt;">
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div>
+    <div class="col-lg-6">
+        
+    </div>
+    <div class="col-lg-3" style="border-left: solid; border-left-color: #a52a2a; border-width: 5px; border-radius: 15pt;">
+        
+    </div>
+    </div>
+    </div>
+    
