--- a/app/header/header.component.html
+++ b/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark " style="background-color: #a52a2a; cursor: pointer;">
+<nav class="navbar navbar-dark sticky-top " style="background-color: #a52a2a; cursor: pointer; background: linear-gradient(to bottom, #cc3300 90%, #800000 100%);">
     <a class="navbar-brand" href="#">
       <img src="/assets/LT.png" style="border-radius: 100pt; width: 50px; height: auto; float: inline-start; ">
       LifeTime
