--- a/app/profil/profil.component.html
+++ b/app/profil/profil.component.html
@@ -1,14 +1,105 @@
-<div  class="container-fuild">
+<app-header></app-header>
+<div class="container">
     <div class="row">
-    <div class="col-lg-3" style="border-right: solid; border-right-color: #a52a2a; border-width: 5px; border-radius: 15pt;">
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <div class="col-lg-3" id="colLeft">
+
+            <div id="userLog">
+                <div>
+                    <img id="profilPic" (click)="profil()" src="/assets/profil/{{user.photo}}">
+                </div>
+                <button class="btn btn-link" style="color: black;" (click)="profil()">
+                    <h5>{{user.identifiant}}</h5>
+                </button><br>
+            </div>
+            <h6>Mes amis:</h6>
+            <div id="listUsers" *ngFor="let unUser of listUsers">
+                <div>
+                    <img id="picUsers" src="/assets/profil/{{unUser.photo}}"><a>{{unUser.identifiant}}</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6" style="margin-top: 5pt;">
+            <div class="card">
+                <h5 class="card-header">Créer une publication</h5>
+                <div class="card-body">
+
+                    <form id="textOnly" style="display: block;">
+                        <button type="button" class="btn btn-danger btn-sm" (click)="addPhoto()"> Photo</button>
+                    </form>
+                    <form id="photo" style="display: none;">
+                        <input name="image" type="file" #imageInput accept="image/*"
+                            (change)="fileChangeEvent(imageInput, $event)" />
+
+                        <image-cropper style="max-width:400px;height: auto;" [imageChangedEvent]="imageChangedEvent"
+                            [maintainAspectRatio]="true" cropperMaxHeight="200px" [aspectRatio]="4/3" format="png"
+                            resizeToHeight="300" (imageCropped)="imageCropped(imageInput, $event)"
+                            (imageLoaded)="imageLoaded()" (cropperReady)="cropperReady()"
+                            (loadImageFailed)="loadImageFailed()"></image-cropper>
+
+                        <br>
+                        <label>
+                            <h6>Description:</h6>
+                        </label>
+                        <textarea type="text" name="identifiant" class="form-control" id="identification"
+                            [(ngModel)]="post.text"></textarea>
+                        <input type="submit" value="Publier" class="btn btn-dark btn-sm" style="margin-top: 5pt;"
+                            (click)="addPostP(post.idPost, post)">
+                    </form>
+
+                </div>
+
+            </div>
+            <div *ngFor="let unPost of listPosts">
+                <div class="card">
+                    <h5 class="card-header"><img id="picUsers"
+                            src="/assets/profil/{{unPost.user.photo}}"><a>{{unPost.user.identifiant}}</a></h5>
+                    <img class="card-img-top" src="/assets/post/{{unPost.photo}}" alt="Card image cap">
+                    <div class="card-body">
+                        <p class="card-text">{{unPost.text}}</p>
+                    </div>
+                    <div class="card-body">
+                        <a class="com" >
+                            
+                            <button class="btn btn-link" style="color: black;" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                                Voir les commentaires:
+                              </button>
+                        </a>
+                        <form>
+                            <img id="picUsers" src="/assets/profil/{{user.photo}}">
+                            <input type="text"
+                                name="comment" class="votreCom"  [(ngModel)]="comment.texte"
+                                placeholder="Votre commentaire...">
+                                <button class="btn btn-dark btn-sm" (click)="addComment(unPost.idPost,unPost)">Envoyer</button>
+                        </form>
+                    </div>
+                    <div class="collapse" id="collapseExample">
+                    <div class="card-body">
+                        <table id="commentaires" style="text-align: left; display: block;">
+                            
+
+                            <tr *ngFor="let unComment of listComments">
+
+                                <th scope="row" style="vertical-align: middle;"><img id="picUsers" src="/assets/profil/{{unComment.user1.photo}}"></th>
+
+                                <td style="vertical-align: middle; width:20pt;">{{unComment.user1.identifiant}}
+                                </td>
+                                <td style="vertical-align: middle; width: 200pt;padding-left: 20pt;">{{unComment.texte}}
+                                </td>
+                                
+
+
+                            </tr>
+
+                        </table>
+                    </div>
+                </div>
+                    <a id="datePost">{{unPost.datePost | date: " dd/MM/yyyy ' - ' HH'h'mm"}}</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3"
+            style="background-color:whitesmoke;border-left-style: solid;border-right-style: solid; border-color: #a52a2a; border-width: 5px; border-top-left-radius: 15pt;">
+
+        </div>
     </div>
-    <div class="col-lg-6">
-        
-    </div>
-    <div class="col-lg-3" style="border-left: solid; border-left-color: #a52a2a; border-width: 5px; border-radius: 15pt;">
-        
-    </div>
-    </div>
-    </div>
-    
+</div>
